- Some corrections to supplementary documents - Cleanup of project description

--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -48,17 +48,17 @@
 
 \section{Project Description}
 \subsection{Background and Summary}
-The next century will see unprecedented changes to the climate system. The most well understood trends are of a broad global nature and aren't always characteristic of regional scales, which are key for planning on all levels. Thus, developing a scientific understanding of changing regional climate is a pressing unmet challenge. Regional climate change is particularly important to California where two-thirds of the water supply originates from the Sierra Nevada.  Growing concern is that climate change will directly alter this natural store of water, primarily supplied by  winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will stem late summer water flow which is integral to sustaining all stakeholders water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale, convective, and orographically forced systems and the fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
+The next century will see unprecedented changes to the climate system, but the most well understood trends are of a broad global nature and not necessarily characteristic of regional scales. Developing a scientific understanding of changing regional climate is an unmet challenge that is key to planning on all levels. Regional climate change is particularly important to California where two-thirds of the water supply originates from the Sierra Nevada.  There is growing concern that climate change will directly alter this natural store of water, primarily supplied by  winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will stem late summer water flow, which is integral to sustaining agricultural and residential water needs.  However, accurate models of future snowpack require high model resolution to represent large-scale, convective, orographically forced systems and the fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
 \\\\
-The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, with a focus on mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  To address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.  The major benefits of this framework is the ability to dynamically simulate global circulations (eliminating bias from conventional boundary conditions), better represent features such as topography and key hydroclimate teleconnections (e.g. atmospheric rivers), and all in a computationally cost efficient manner that lends itself to smaller server research ($<$100 nodes). 
+The \textbf{central objective} of this work is to better understand \textbf{how climate change will affect water resources in California and the western USA, with a focus on mountain snowpack}.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  To address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.  The major benefits of this framework is the ability to dynamically simulate global circulations (eliminating bias from conventional boundary conditions), better represent features such as topography and key hydroclimate teleconnections (e.g. atmospheric rivers), and all in a computationally cost efficient manner that lends itself to smaller server research ($<$100 nodes). 
 \\\\
 The key \textbf{scientific questions} that will be addressed by this proposal are as follows:
 
 \vspace{-0.4cm}
 \begin{itemize}
-\item[(Q1)] Can VRGCMs provide added value to the cryosphere community by representing snowfall timing and the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack in the Sierra Nevada and broader western US?  How sensitive are these indicators to the underlying grid resolution?
+\item[(Q1)] Can VRGCMs provide added value to the cryosphere community by reducing uncertainty of  snowfall timing and the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack in the Sierra Nevada and broader western US?  How sensitive are these indicators to the underlying grid resolution?
 
-\item[(Q2)] Quantitatively, how will west coast mountain snowpack (both total and basin scale) be affected by future climate?  How will interannual variability be affected?
+\item[(Q2)] Quantitatively, how will west coast mountain snowpack (both total and basin scale) be affected under future climate change?  How will interannual variability be affected?
 
 \item[(Q3)] How will the spatial distribution of mountain snowpack change in response to anticipated global changes in general circulation?
 
@@ -70,7 +70,7 @@ The key \textbf{scientific questions} that will be addressed by this proposal ar
 \vspace{-0.4cm}
 \begin{itemize}
 \item[(H1)] VRGCMs are a statistically informative and cost-effective method to characterize snowfall, snowpack, and teleconnection trends within the Sierra Nevada (and western USA) compared to conventional standard resolution general circulation model runs used by the Intergovernmental Panel on Climate Change (IPCC) and downscaled regional climate model simulations.
-\item[(H2)] Sierra Nevada snowpack trends will see a significant decline in the coming century, with a shift towards more rain and less snow, earlier peak accumulation and melt onset, and more dramatic impacts felt on lower elevation basins.
+\item[(H2)] Modeled west coast snowpack will see a significant decline in the coming century, with a shift towards more rain and less snow, earlier peak accumulation and melt onset, and more dramatic impacts felt on lower elevation basins.
 \item[(H3)] Atmospheric rivers and, consequently, precipitation will be better represented within the VRGCM framework as it has vastly improved dynamical resolution and topographical representation than conventional GCMs.  We posit that this will lead to better characterization of mean atmospheric river event landfall location, precipitation intensity, duration, and type (especially snowfall).  Further, we expect the 21st century will see a poleward shift in precipitation due to changes in the general circulation brought about by climate change.  
 \end{itemize}
 
@@ -125,11 +125,11 @@ With global high-resolution modeling being prohibitively expensive, the National
 
 \subsubsection{Mountain Snowpack}
 
-Regional climate change is particularly important to the western USA and California, a semi-arid and extremes driven climate.  The extreme natural variability of this region, coupled with climate change and land use changes, is particularly important from a food security perspective as the agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production.  A natural stabilizing buffer for the extreme nature of the region comes in the form of snowpack. Snowpack provides a crucial natural reservoir in the western US (75 percent of the freshwater supply) and California (33 percent of the freshwater supply) \citep{cayan1996interannual}.  Western US summers are typically dry and snowpack storage is critical for water use in agricultural, environmental, and municipal sectors during these arid months \citep{dettinger1995large, mote_declining_2005, maurer2007detection}.  Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
+Regional climate change is particularly important to the western USA and California, a semi-arid and extremes driven climate.  The extreme natural variability of this region, coupled with climate change and land use changes, is particularly important from a food security perspective; notably, the agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production.  A natural stabilizing buffer for the extreme nature of the region comes in the form of snowpack. Snowpack provides a crucial natural reservoir in the western US (75 percent of the freshwater supply) and California (33 percent of the freshwater supply) \citep{cayan1996interannual}.  Western US summers are typically dry and snowpack storage is critical for water use in agricultural, environmental, and municipal sectors during these arid months \citep{dettinger1995large, mote_declining_2005, maurer2007detection}.  Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
 
 %Regional climate change is particularly important to California, one of the most biologically and environmentally diverse regions in the world. The agricultural industry in California is responsible for roughly 50 percent of the nation's fruit and vegetable production, and is particularly susceptible to extreme weather events and sudden changes in regional climate. Western mountain snowpack is a crucial reservoir for precipitation from California's wet winters (providing 75 percent of freshwater supplies), and is an important mechanism for the gradual release of this water during the typically dry summer \citep{cayan1996interannual}. In particular, summer snowmelt is an incredibly important source of agricultural water \citep{dettinger1995large, mote_declining_2005, maurer2007detection}. Recent trends in water availability have projected a potentially significant loss of agricultural water associated with loss of snow melt \citep{dyer2006spatial}. In particular, the 2013-2014 snow season was one of the driest years on record in California (one-fifth of normal), with water reserves at record lows, resulting in repercussions that were felt throughout the California Central Valley agricultural communities.
 
-Climate change directly impacts mountain snowpack via two avenues: First, warming temperatures lead to an earlier spring thaw, increasing runoff associated with spring melt and decreasing late summer water availability due to early depletion of snowpack. Second, warmer air holds more water leading to potential regional increases in both large-scale and convective precipitation in areas with forced orographic uplift (e.g. mountain ranges of the western USA), although warmer temperatures also tend to favor rainfall over snowfall. Anomalous warm temperatures are particularly important in the spring at mid- to high-elevations, which would normally be below freezing throughout the winter period \citep{cayan1996interannual,stewart2009changes}. Evidence of climate change on mountain snowpack in the western US has primarily been served via empirical studies focused on April 1st measured snow depth, which has suggested there is clear evidence of a decline in snowpack throughout the western US everywhere except in the southern Sierra Nevadas \citep{mote_declining_2005; bales2006mountain}. Accumulation in this region has been attributed to an increase in the strength of the North American monsoon \citep{dyer2006spatial}. Other studies have corroborated this conclusion \citep{dettinger1995large,mote_declining_2005,knowles2006trends} and suggested that warming of the Earth's climate will lead to a continual decline in snow resources. Further, many of these studies have demonstrated that \textit{although the trends presented here may be partially attributable to interdecadal climate variability associated with the Pacific decadal oscillation, they also appear to result from still longer-term climate shifts} \citep{knowles2006trends}. Current trends suggest that there will be a continued decline in mountain snowpack \citep{stewart2009changes}. Regions for which the hydrological cycle is dependent on the availability of water resources originating from melting snow or ice are expected to be particularly hard hit, with potentially dramatic effects on ecology and agriculture \citep{barnett2005potential}.
+Climate change directly impacts mountain snowpack via two avenues: First, warming temperatures lead to an earlier spring thaw, increasing runoff associated with spring melt and decreasing late summer water availability due to early depletion of snowpack. Second, warmer air holds more water leading to potential regional increases in both large-scale and convective precipitation in areas with forced orographic uplift (e.g. mountain ranges of the western USA), although warmer temperatures also tend to favor rainfall over snowfall. Anomalous warm temperatures are particularly important in the spring at mid- to high-elevations, which would normally be below freezing throughout the winter period \citep{cayan1996interannual,stewart2009changes}. Evidence of climate change on mountain snowpack in the western US has primarily been served via empirical studies focused on April 1st measured snow depth, which has suggested there is clear evidence of a decline in snowpack throughout the western US everywhere except in the southern Sierra Nevadas \citep{mote_declining_2005, bales2006mountain}. Accumulation in this region has been attributed to an increase in the strength of the North American monsoon \citep{dyer2006spatial}. Other studies have corroborated this conclusion \citep{dettinger1995large,mote_declining_2005,knowles2006trends} and suggested that warming of the Earth's climate will lead to a continual decline in snow resources. Further, many of these studies have demonstrated that \textit{although the trends presented here may be partially attributable to interdecadal climate variability associated with the Pacific decadal oscillation, they also appear to result from still longer-term climate shifts} \citep{knowles2006trends}. Current trends suggest that there will be a continued decline in mountain snowpack \citep{stewart2009changes}. Regions for which the hydrological cycle is dependent on the availability of water resources originating from melting snow or ice are expected to be particularly hard hit, with potentially dramatic effects on ecology and agriculture \citep{barnett2005potential}.
 In order to obtain a robust prediction of snow water availability in the 21st century, global atmospheric models must be used to capture the long time scales associated with the changing climate.  However, mountain snow cover exhibits fractal-like characteristics and strong topographical dependence that makes it difficult to capture at the typical resolutions of global models, as depicted in our preliminary findings in Figure \ref{fig:VarResSWE}.  This was further shown in \cite{pavelsky2011accumulation} and \cite{pavelsky2012changes}, using the WRF regional model, where the authors found that topographical resolutions $>$27km couldn't accurately resolve winter snowpack nor the necessary orographic uplift to alter mountain precipitation phase from rain to snow. Consequently, an accurate treatment of snowpack requires grid resolution which is much finer than modern global models can produce, due in large part to computational restraints. Hence either using dynamical downscaling to a high resolution regional model, such as the Weather Research and Forecasting (WRF) model \citep{michalakes2001development}, or a global model that captures different spatial scales, such as a VRGCM, is necessary to study modeled snowpack in a global context.
 
 \subsubsection{Observational datasets} \label{sec:ObservationalData}
@@ -159,15 +159,15 @@ Dataset & Snowpack  Product & Spatial  Resolution & Temporal Resolution \\
 \end{center}
 \end{table*}
 
-The Canadian Meteorological Centre (CMC) SNOWDP dataset is comprised of surface synoptic observations and meteorological aviation reports from the World Meteorological Organization’s information system.  CMC derives SWE values using the aforementioned SNOWDP measurements and look-up tables for snow density values \citep{brown2003gridded}.  The DAYMET dataset provides SWE estimations from interpolated meteorological stations.  The interpolated station data is then extrapolated, using a truncated Guassian weighting filter, to create a high resolution gridded output \citep{thornton2012daymet}.  The Moderate Resolution Imaging Spectroradiometer (MODIS) satellite dataset provides SNOWC using a snow mapping algorithm with a Normalized Difference Snow Index (NDSI) \citep{salomonson2006development}.  The NDSI is used to distinguish between snow and other features (such as cloud cover) by using visible and short wave near IR spectral bands \citep{salomonson2006development}.  The SNOwpack TELemetry (SNOTEL) in situ dataset is comprised of 24 automated observational stations spread throughout the Sierra Nevada mountain range measuring SNOWDP and SWE \citep{serreze1999characteristics}.  The areal extent of the SNOTEL stations range from 38.07$^\circ$ to 42.99$^\circ$ latitude by -120.79$^\circ$ to -119.23$^\circ$ with an average elevation of 2343.45 meters.  In addition to maintaining the SNOTEL automated station dataset, the Natural Resources Conservation Service (NRCS) also takes in situ snow course measurements of SNOWDP and SWE by trained observers at 32 permanent sites.  The measurements are taken during the first of every month in January through May along a 305 meter long transect line, usually in small meadow areas, with an average elevation of 2293.01 meters.  The North American Regional Reanalysis (NARR) dataset provides monthly averaged SNOWDP and SNOWC output variables using a high resolution atmospheric model (Eta Model) forced by a Regional Data Assimilation System (RDAS) \citep{mesinger2006north}.  The other reanalysis dataset (NCEP - CFSV2) that will be used is a recently updated (2013) version of its predecessor (2004).  The NCEP dataset provides improved two meter surface temperature, MJO, and SST forecasts while upgrading overall performance in seasonal/subseasonal forecasting results, compared to its predecessor \citep{saha2014ncep}. NCEP has also been advised for use by decision makers in the water management and agricultural fields \citep{saha2014ncep}.  Two 0.25$^\circ$ uniform resolution (spectral element and finite-volume dynamical cores) CESM datasets will be used to intercompare with the VRGCM simulations too.  These two simulations were conducted by a team at Lawrence Berkeley National Laboratories (LBNL). To provide added benefit to the proposal, we will compare the VRGCM simulations to a pair of regional climate model (RCM) simulations too.  A pair of simulations will be conducted at UC Davis using an (out of the box) version (V3.5.1) of the Weather Research and Forecasting (WRF) model, a widely used RCM.  The simulations will use a multi-resolution domain with a coarse resolution of 27km and a finer resolution domain of 9km situated over the western USA (centered on the Sierra Nevada).  Both WRF domains provide SWE, SNOWDP, and SNOWC output variables.
+The Canadian Meteorological Centre (CMC) SNOWDP dataset is comprised of surface synoptic observations and meteorological aviation reports from the World Meteorological Organization’s information system.  CMC derives SWE values using the aforementioned SNOWDP measurements and look-up tables for snow density values \citep{brown2003gridded}.  The DAYMET dataset provides SWE estimations from interpolated meteorological stations.  The interpolated station data is then extrapolated, using a truncated Gaussian weighting filter, to create a high resolution gridded output \citep{thornton2012daymet}.  The Moderate Resolution Imaging Spectroradiometer (MODIS) satellite dataset provides SNOWC using a snow mapping algorithm with a Normalized Difference Snow Index (NDSI) \citep{salomonson2006development}.  The NDSI is used to distinguish between snow and other features (such as cloud cover) by using visible and short wave near IR spectral bands \citep{salomonson2006development}.  The SNOwpack TELemetry (SNOTEL) in situ dataset is comprised of 24 automated observational stations spread throughout the Sierra Nevada mountain range measuring SNOWDP and SWE \citep{serreze1999characteristics}.  The areal extent of the SNOTEL stations range from 38.07$^\circ$ to 42.99$^\circ$ latitude by -120.79$^\circ$ to -119.23$^\circ$ with an average elevation of 2343.45 meters.  In addition to maintaining the SNOTEL automated station dataset, the Natural Resources Conservation Service (NRCS) also takes in situ snow course measurements of SNOWDP and SWE by trained observers at 32 permanent sites.  The measurements are taken during the first of every month in January through May along a 305 meter long transect line, usually in small meadow areas, with an average elevation of 2293.01 meters.  The North American Regional Reanalysis (NARR) dataset provides monthly averaged SNOWDP and SNOWC output variables using a high resolution atmospheric model (Eta Model) forced by a Regional Data Assimilation System (RDAS) \citep{mesinger2006north}.  The other reanalysis dataset (NCEP - CFSV2) that will be used is a recently updated (2013) version of its predecessor (2004).  The NCEP dataset provides improved two meter surface temperature, MJO, and SST forecasts while upgrading overall performance in seasonal/subseasonal forecasting results, compared to its predecessor \citep{saha2014ncep}. NCEP has also been advised for use by decision makers in the water management and agricultural fields \citep{saha2014ncep}.  Two 0.25$^\circ$ uniform resolution (spectral element and finite-volume dynamical cores) CESM datasets will be used to intercompare with the VRGCM simulations too.  These two simulations were conducted by a team at Lawrence Berkeley National Laboratories (LBNL). To provide added benefit to the proposal, we will compare the VRGCM simulations to a pair of regional climate model (RCM) simulations too.  A pair of simulations will be conducted at UC Davis using an (out of the box) version (V3.5.1) of the Weather Research and Forecasting (WRF) model, a widely used RCM.  The simulations will use a multi-resolution domain with a coarse resolution of 27km and a finer resolution domain of 9km situated over the western USA (centered on the Sierra Nevada).  Both WRF domains provide SWE, SNOWDP, and SNOWC output variables.
 
 \subsubsection{Variable-Resolution Global Climate Modeling (VRGCM)}
 
-The Community Earth-System Model (\citet{hurrell2013community}) is a state-of-the-art Earth modeling framework, consisting of atmospheric, oceanic, land and sea ice components. This framework has been under development for nearly two decades, and has been used heavily in better understanding the effects of global climate change. The Community Atmosphere Model (CAM, the atmospheric component of CESM) is further broken into two components: the dynamical core, which solves the 3-D primitive equations of motion for the atmosphere, and the physics parameterization suite, which incorporates processes that occur on scales below the model grid scale. Because of its modular nature, CAM currently allows for switching between four dynamical cores, including the finite-volume, semi-Lagrangian, Eulerian and spectral element dynamical cores, with work underway for the inclusion of others in the near future. Of these four, only one dynamical core has variable-resolution capability, namely the CAM spectral element (SE) dynamical core (CAM-SE).
+The Community Earth-System Model \citep{hurrell2013community} is a state-of-the-art Earth modeling framework, consisting of atmospheric, oceanic, land and sea ice components. This framework has been under development for nearly two decades, and has been used heavily in better understanding the effects of global climate change. The Community Atmosphere Model (CAM, the atmospheric component of CESM) is further broken into two components: the dynamical core, which solves the 3-D primitive equations of motion for the atmosphere, and the physics parameterization suite, which incorporates processes that occur on scales below the model grid scale. Because of its modular nature, CAM currently allows for switching between four dynamical cores, including the finite-volume, semi-Lagrangian, Eulerian and spectral element dynamical cores, with work underway for the inclusion of others in the near future. Of these four, only one dynamical core has variable-resolution capability, namely the CAM spectral element (SE) dynamical core (CAM-SE).
 
-The spectral element method has several important properties including parallel scalability, flexibility and accuracy, that make it a desirable choice for modeling atmospheric dynamics.  The spectral element dynamical core (\citet{fournier2004spectral, taylor2010compatible}) is now the default dynamical core in CAM and so is a supported platform for scientific research. Recently CAM-SE has added variable-resolution support which allows for coupled climate simulations in CAM on a variable-resolution atmospheric mesh. The mesh must be conformal, so each edge is shared by exactly two quadrilateral spectral elements. 
+The spectral element method has several important properties including parallel scalability, flexibility and accuracy, that make it a desirable choice for modeling atmospheric dynamics.  The spectral element dynamical core \citep{fournier2004spectral, taylor2010compatible} is now the default dynamical core in CAM and so is a supported platform for scientific research. Recently CAM-SE has added variable-resolution support which allows for coupled climate simulations in CAM on a variable-resolution atmospheric mesh. The mesh must be conformal, so each edge is shared by exactly two quadrilateral spectral elements. 
 
-The adoption of mesh refinement in the global atmospheric modeling community is fairly recent, although a number of major modeling centers are currently pushing this capability to operational general circulation models \cite{skamarock2012mpas, LMHSJL2013MWR, CMZCJMAT2013MWR, mccorquodale2014adaptive}.   Nonetheless, static mesh refinement has been demonstrated to be effective for operational modeling of tropical cyclones \cite{zarzycki2014multidecadal, zarzycki2014using}, large-scale weather systems \cite{rauscher2014impact} and regional climate \cite{rauscher2013exploring, zarzycki2014aquaplanet}.
+The adoption of mesh refinement in the global atmospheric modeling community is fairly recent, although a number of major modeling centers are currently pushing this capability to operational general circulation models \citep{skamarock2012mpas, LMHSJL2013MWR, CMZCJMAT2013MWR, mccorquodale2014adaptive}.   Nonetheless, static mesh refinement has been demonstrated to be effective for operational modeling of tropical cyclones \citep{zarzycki2014multidecadal, zarzycki2014using}, large-scale weather systems \citep{rauscher2014impact} and regional climate \citep{rauscher2013exploring, zarzycki2014aquaplanet}.
 
 Two of the meshes that we will use are depicted in Figure \ref{fig:CESMVarResMeshes}, which shows smooth refinement over North America from a global resolution of 1.0$^\circ$ to a refined region with 0.25$^\circ$ (right) and 0.125$^\circ$ (left) grid spacing over the US west coast.  We have also implemented support for variable-resolution grids into the land surface model of CESM (CLM).  This modification greatly improves model performance by the reducing computational overhead needed for remapping between atmospheric and land model grids.  Figure \ref{f3} shows a clear improvement in the representation of topographic features at higher resolutions.  Both the Sierra Nevada mountain range and California's central valley do not appear in the uniform 1 degree simulations.  Preliminary simulations have been conducted over the period 1980-1986 to validate the model is correctly capturing observed precipitation and snow water equivalent (depicted in figures \ref{fig:VarResPrecipitation} and \ref{fig:VarResSWE}).  The model performs exceptionally well, exhibiting very close visual agreement with observational datasets for both fields, and showing the benefit of enhanced topographic resolution.
 
@@ -300,7 +300,7 @@ The research team will reach out to boundary organizations such as the UC Davis 
 
 \subsubsection{Plan of Work}
 
-PI Ullrich will be the primary administrator for the project, and will be responsible for managerial and administrative decisions, including planning, scheduling and oversight of research tasks, plus reporting of technical progress. He will be the primary contact on this project and will be the point of engagement for project collaborators and their teams. He will further be responsible for ensuring that sufficient computational resources are available for the project. The majority of the requested funds will be used to pay for one full-time Graduate Student Researcher (GSR) who will pursue this research as part of their Ph.D. research. The GSR will be advised full-time by the PI at UC Davis. In addition, funding will be used to reimburse the PI for one month of salary, which will be used to fund a eight percent commitment of effort to support the GSR on this work. The PI and GSR will meet once per week to discuss the progress and status of the project. Milestones for this project are given below:
+PI Ullrich will be the primary administrator for the project, and will be responsible for managerial and administrative decisions, including planning, scheduling and oversight of research tasks, plus reporting of technical progress. He will be the primary contact on this project and will be the point of engagement for project collaborators and their teams. He will further be responsible for ensuring that sufficient computational resources are available for the project. The majority of the requested funds will be used to pay for one full-time Graduate Student Researcher (GSR) [Alan Rhoades] who will pursue this research as part of their Ph.D. research. The GSR will be advised full-time by the PI at UC Davis. In addition, funding will be used to reimburse the PI for one month of salary, which will be used to fund a eight percent commitment of effort to support the GSR on this work. The PI and GSR will meet once per week to discuss the progress and status of the project. Milestones for this project are given below:
 
 \begin{tabularx}{\textwidth}{cX}
 \hline
