--- a/Ullrich-MountainSnowpack-Summary.tex
+++ b/Ullrich-MountainSnowpack-Summary.tex
@@ -58,6 +58,6 @@ This work sits at the boundary of the atmospheric, hydrologic and computer scien
 \subsection*{Broader Impacts}
 \vspace{-0.5cm}
 
-This work has the potential to greatly increase our capacity to predict future trends in mountain snowpack, with clear consequences for agricultural, municipal and ecological management.  Our evaluation of snowpack trends will be informative to policymakers and stakeholders at both the national and regional level.  This proposal will make a concerted effort towards making climate model tools and data more accessible for agency managers and decision makers alike.
+This work has the potential to greatly increase our capacity to predict future trends in mountain snowpack, with clear benefits for agricultural, municipal and ecological management.  Our evaluation of snowpack trends will be informative to policymakers and stakeholders at both the national and regional level.  This proposal will make a concerted effort towards making climate model tools and data more accessible for agency managers and decision makers alike.
 
 \end{document}
